--- a/.github/workflows/transactions-service-unit-testing.yml
+++ b/.github/workflows/transactions-service-unit-testing.yml
@@ -1,4 +1,4 @@
-name: TransactionsService .NET Unit Tests
+name: 🧪 Unit Tests - TransactionsService by class
 
 on:
   push:
@@ -11,24 +11,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: 🧾 Checkout repo
+        uses: actions/checkout@v4
 
-      - name: Setup .NET
+      - name: ⚙️ Setup .NET SDK
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.0.x
 
-      - name: Restore
+      - name: 📦 Restore dependencies
         run: dotnet restore src/Clear-Budget-API.sln
 
-      - name: Build
+      - name: 🏗️ Build solution
         run: dotnet build src/Clear-Budget-API.sln --no-restore --configuration Release
 
-      - name: Run TransactionServiceTests
+      - name: 🔍 Run TransactionServiceTests
         run: dotnet test src/TransactionsService.Tests/TransactionsService.Tests.csproj --no-build --configuration Release --filter FullyQualifiedName~TransactionServiceTests
 
-      - name: Run CategoryEventConsumerTest
+      - name: 🔍 Run CategoryEventConsumerTest
         run: dotnet test src/TransactionsService.Tests/TransactionsService.Tests.csproj --no-build --configuration Release --filter FullyQualifiedName~CategoryEventConsumerTest
 
-      - name: Run CategoryCacheTests
+      - name: 🔍 Run CategoryCacheTests
         run: dotnet test src/TransactionsService.Tests/TransactionsService.Tests.csproj --no-build --configuration Release --filter FullyQualifiedName~CategoryCacheTests
