--- a/src/APIGateway/appsettings.Development.json
+++ b/src/APIGateway/appsettings.Development.json
@@ -7,7 +7,7 @@
     ]
   },
   "Cors": {
-    "AllowedOrigins": [ "http://localhost:4200", "http://localhost" ]
+    "AllowedOrigins": [ "http://localhost:4200", "http://localhost", "http://localhost:4201" ]
   },
   "Logging": {
     "LogLevel": {
